--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<header class="big-title">
 			<div class="container">
 				<div class="col-md-4">
-					<img src="https://miguelgomezsa.com/img/miguelgomez.png" alt="Miguel Gómez">
+					<img src="">
 				</div>
 				<div class="col-md-8">
 					<br><br>
