--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 		<header class="big-title">
 			<div class="container">
 				<div class="col-md-4">
-					<img src="">
+					<img src="" alt="">
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-12">
 					<br><br>
-					<h2 class="big-head"><span><em>JUANJO GÓMEZ</em></span></h2>
+					<h2 class="big-head"><span><em>JUANJO MOLINA</em></span></h2>
 					<h4 class="text-sub" id="words-rotate">Programador, Consultor SEO, Desarrollador, Freelance</h4>
 					<br>
 					<h2>Creo tu proyecto desde cero y lo llevo a lo más alto</h2>
 					<br>
-				</div>
+				
 			</div>
 		</header>
 	</div>
