--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Programador web - SE - Diseño con IA - Marketing - Programación</h2>
-					<p>Hola soy&nbsp;Juanjo Molina. Soy <strong>programador web </strong>y<strong> consultor&nbsp;</strong><strong>SEO</strong>. Resido en el <strong> Maresme</strong>. Trabajo como&nbsp;<strong>desarrollador web&nbsp;freelance</strong>&nbsp;online para multitud de personas y empresas de diversas partes de Espa&ntilde;a, como <strong>Madrid</strong>, <strong>Barcelona</strong>, <strong>Valencia</strong>, <strong>Bilbao</strong>, <strong>Sevilla</strong> o <strong>M&aacute;laga</strong>. Aunque tambi&eacute;n tengo clientes con los que trabajo de forma remota. Ubicados en <strong>Suiza</strong>, <strong> y tambien Francia.</strong>
+					<p>Hola soy&nbsp;Juanjo Molina. Soy <strong>programador web </strong>y<strong> consultor&nbsp;</strong><strong>SEO</strong>.  Trabajo como&nbsp;<strong>desarrollador web&nbsp;freelance</strong>&nbsp;online para multitud de personas y empresas de diversas partes de Espa&ntilde;a, como <strong>Madrid</strong>, <strong>Barcelona</strong>, <strong>Valencia</strong>, <strong>Bilbao</strong>, <strong>Sevilla</strong> o <strong>M&aacute;laga</strong>. Aunque tambi&eacute;n tengo clientes con los que trabajo de forma remota. Ubicados en <strong>Suiza</strong>, <strong> y tambien Francia.</strong>
 
 						<p><strong>Inform&aacute;tico</strong> de profesi&oacute;n, amante de las nuevas tecnolog&iacute;as. Autodidacta de nacimiento. Mi pasi&oacute;n es el <strong>desarrollo.</strong>&nbsp;Ser <strong>programador web</strong> me permite realizarme como persona, crear, ayudar a otras personas con sus proyectos y&nbsp;<strong>programar</strong> los m&iacute;os. As&iacute; me gano la vida. <strong>Programando</strong> desde <strong>p&aacute;ginas web</strong> a entornos de gesti&oacute;n a medida, tambi&eacute;n he <strong>desarrollado</strong> algunas <strong>aplicaciones para m&oacute;viles</strong>, aunque me he especializado y esta materia ya no la domino tanto.</p>
 						
@@ -177,7 +177,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Grado ingenieria informatica</h3>
-									<span class="company">Ubicados - 2007 - 2012</span>
+									<span class="company">UOC - 2007 - 2012</span>
 								</div>
 								<div class="timeline-body">
 								
