--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Grado ingenieria informatica</h3>
-									<span class="company">UOC - 2007 - 2012</span>
+									<span class="company">UOC - 2007 - no acabada</span>
 								</div>
 								<div class="timeline-body">
 								
