--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
 								<i class="icon-bargraph"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Administracion de sistemas</h3>
-								<p></p>
+								<h3>Diseño con IA</h3>
+								<p>Desde Logotipos - imagen corporativa - Imagen publicitaria</p>
 							</div>
 						</div>
 
